--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -9,6 +9,11 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.funkycoders.myapplication.ui.HomeFragment"
-        android:label="fragment_home"
+        android:label=""
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/userDetailsFragment"
+        android:name="com.funkycoders.myapplication.ui.UserDetailsFragment"
+        android:label="fragment_user_details"
+        tools:layout="@layout/fragment_user_details" />
 </navigation>
